src/test/ui/type-alias-enum-variants/enum-variant-priority-higher-than-other-inherent.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/enum-variant-priority-higher-than-other-inherent.rs:21:5
   |
LL |     <E>::V();
   |     ^^^^^^^^ an argument of type u8 is missing
   |
note: tuple variant defined here
  --> $DIR/enum-variant-priority-higher-than-other-inherent.rs:5:5
   |
LL |     V(u8)
   |     ^^^^^
help: provide the argument
   |
LL |     V(u8)({u8});
   |     ^^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/enum-variant-priority-higher-than-other-inherent.rs:22:17
   |
LL |     let _: u8 = <E2>::V;
   |            --   ^^^^^^^ expected `u8`, found enum `E2`
   |            |
   |            expected due to this

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
